# greenautarky-telemetry

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/greenautarky_telemetry/: PRIVACY.md  __init__.py  config_flow.py  manifest.json
tests/: test_manifest.py
